# Opt_CollageMaker

./: .gitignore  CMakeLists.txt  README.md  result.txt
Scripts/: answer.txt  answer_12.txt  flow.txt  gogo_2.txt  invoker.py  log.txt  run_release.py
Test/: main.cpp
Test/Test/: main.cpp
app/: main.cpp
docs/: CollageMakerVis.java
include/: algorithm.hpp  ant_colony.hpp  genetic.hpp  grid_approx.hpp  grid_layout.hpp  max_rect.hpp  max_rect_2.hpp  max_rect_3.hpp  max_rect_4.hpp  solver.hpp  utility.hpp
scripts/: flow_2.txt  invoker.py  log.txt  run_release.py
src/: solver.cpp  utility.cpp
test/: main.cpp
